Création page panier
Création de la page panier + affichage des éléments principaux du panier

--- a/front-end/styles/style.css
+++ b/front-end/styles/style.css
@@ -26,6 +26,11 @@
     align-items: center;
 }
 
+.navbar--container img {
+    width: 30px;
+    color: white
+}
+
 .navbar-toggler,
 .navbar-toggler:focus,
 .navbar-toggler:active {
