--- a/front-end/styles/pageproduit_style.css
+++ b/front-end/styles/pageproduit_style.css
@@ -2,6 +2,7 @@
 
 section {
     margin-top: 70px;
+    min-height: calc(100vh - 320px);
 }
 
 .product--container{
@@ -45,24 +46,25 @@ section {
 
 .container--addcartbtn{
     display: inline-block;
-    background-color: #BEA25A;
+    background-color: #FFF;
     border-radius: 10px;
-    border: 4px double #cccccc;
-    color: #eeeeee;
+    color: #BEA25A;;
+    border: 2px solid #BEA25A;
     text-align: center;
     font-size: 20px;
-    padding: 10px;
+    padding: 15px;
     width: 100%;
     max-width: 100%;
-    
-    -moz-transition: all 0.8s;
-    -webkit-transition: all 0.8s;
-    transition: all 0.8s;
+    -moz-transition: all 0.2s;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
 }
 
+
+
 .container--addcartbtn:hover{
-    -moz-transform: scale(1.02);
-    -webkit-transform: scale(1.02);
-    transform: scale(1.02);
+    background-color: #BEA25A;
+    color: #FFF;
+    font-weight: 600;
 }
 
