--- a/front-end/styles/panier_style.css
+++ b/front-end/styles/panier_style.css
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: center;                
     min-height: calc(100vh - 320px);
-    margin: 20px;
+    margin: 0px 0px 20px 0px;
+    padding: 0px 10px 0px 10px;
 }
 
 
@@ -26,12 +27,6 @@
     margin-top: 30px; 
 }
 
-th {
-}
-
-tr {
-}
-
 td {
     padding: 15px 10px 0px 10px;
     border: 2px solid lightgrey;
@@ -41,6 +36,10 @@ td {
     font-weight: 600;
     padding : 5px;
     text-align: center;
+}
+
+.itemRecap {
+    font-size: 0.7rem;
 }
 
 .quantity {
@@ -54,8 +53,10 @@ td {
 .removebtn {
     width: 20px;
     height: 20px;   /* Style bouton supprimer */
+    padding-left: 15px;
     margin-bottom: 15px;
     border: none;
+    background-color: white;
 }
 
 .x {
@@ -63,10 +64,22 @@ td {
     color: red;
 }
 
+.totalPrice {
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
 .containertotal {
     padding-bottom: 10px;
 }
 
+.calcul {
+    padding-bottom: 10px;
+}
+
+.emptytd {
+    border: none;
+}
 
 /* Bouton commander */ 
 
@@ -85,5 +98,20 @@ td {
     -moz-transition: all 0.2s;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
+}
+
+/* Formulaire */ 
+
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 10px;
+}
+
+input {
+    width: 250px;
+    margin: -5px 0px 10px 0px;
 }
 
