--- a/front-end/styles/panier_style.css
+++ b/front-end/styles/panier_style.css
@@ -32,6 +32,10 @@ td {
     border: 2px solid lightgrey;
 }
 
+.cart--table {
+    margin: 10px 0px 0px 10px;
+}
+
 .headtable {
     font-weight: 600;
     padding : 5px;
@@ -53,7 +57,6 @@ td {
 .removebtn {
     width: 20px;
     height: 20px;   /* Style bouton supprimer */
-    padding-left: 15px;
     margin-bottom: 15px;
     border: none;
     background-color: white;
@@ -115,3 +118,9 @@ input {
     margin: -5px 0px 10px 0px;
 }
 
+.erreur {
+    color: red;
+    font-weight: 800;
+    font-size: 0.7rem;
+    padding-top: 10px;
+}
