Modification mineures + création page de confirmation
ajout du prix total de la commande en local storage / écriture en Camel case / Création de la page de confirmation de commande

--- a/front-end/styles/panier_style.css
+++ b/front-end/styles/panier_style.css
@@ -85,6 +85,10 @@ td {
 }
 
 /* Bouton commander */ 
+.linkbtn {
+    width: 100%;
+    padding: 15px;
+}
 
 .order--btn {
     display: inline-block;
@@ -122,5 +126,5 @@ input {
     color: red;
     font-weight: 800;
     font-size: 0.7rem;
-    padding-top: 10px;
+    padding-top: 15px;
 }
