--- a/front-end/styles/pageproduit_style.css
+++ b/front-end/styles/pageproduit_style.css
@@ -6,8 +6,9 @@ section {
 }
 
 .product--container{
-    width: 300px;
+    width: 100%;
     padding-left: 10px;
+    padding-right: 10px;
     text-decoration: none;
     border: none;
 }
@@ -23,9 +24,10 @@ section {
 }
 
 .product--selectprice{
-    width: 300px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
+    padding-right: 10px;
 }
 
 .product--price{
@@ -52,6 +54,7 @@ section {
     border: 2px solid #BEA25A;
     text-align: center;
     font-size: 20px;
+    margin-top: 100px;
     padding: 15px;
     width: 100%;
     max-width: 100%;
