Modif navbar / reponsive
Modification barre de navigation et responsive

--- a/front-end/styles/pageproduit_style.css
+++ b/front-end/styles/pageproduit_style.css
@@ -5,6 +5,10 @@ section {
     min-height: calc(100vh - 320px);
 }
 
+.navbar-nav {
+    display: flex;
+}
+
 .product--container{
     width: 100%;
     padding-left: 10px;
